--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lan="en">
 	<head>
-		<title>Home|Page<title/>
+		<title>Home|Page</title>
 	</head>
 	<body>
-		<h1> Welcome to our home page<h1>
+		<a href="contact.html">contact</a>
+		<h1> Welcome to our home page</h1>
 				<hr>
 				<p><b> Mahleequq </b></p>
 
