--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<a href="contact.html">contact</a>
+		<a href="profile.html">profile</a>
 		<h1> Welcome to our home page</h1>
 				<hr>
 				<p><b> Mahleequq </b></p>
